--- a/bcrre_exam.cls
+++ b/bcrre_exam.cls
@@ -19,6 +19,8 @@
 \RequirePackage[english]{babel}
 \RequirePackage{booktabs}
 \RequirePackage{siunitx}
+\RequirePackage{caption}
+\RequirePackage{subcaption}
 \RequirePackage[acronym]{glossaries}
 %-------------------
 %
