--- a/main.tex
+++ b/main.tex
@@ -694,9 +694,42 @@ Next, work out the longitudinal linear length of the vertical curve.
 
 $L_{vc}=$ \qty{87.5}{m}
 
+\begin{figure}[p]
+    \centering
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/track-alignment-worksheet-vertical-curve-intervals.drawio.pdf}
+        \caption{interval}
+        \label{fig:vertical-curve-interval}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/track-alignment-worksheet-vertical-curve-heights.drawio.pdf}
+        \caption{grade levels}
+        \label{fig:vertical-curve-height}
+    \end{subfigure}
+    
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/track-alignment-worksheet-vertical-curve-extension.drawio.pdf}
+        \caption{extension}
+        \label{fig:vertical-curve-extension}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/track-alignment-worksheet-vertical-curve-fh.drawio.pdf}
+        \caption{final height}
+        \label{fig:vertical-curve-fh}
+    \end{subfigure}
+    \caption{4 Diagrams showing the states of calculating}
+    \label{fig:vertical-curve-diagrams}
+\end{figure}
+
 \subsubsection*{Intervals}
 
-Next, assume there are 5 intervals and calculate the longitudinal length between each interval.
+Next, assume there are 5 intervals and calculate the longitudinal length between each interval, this measure is shown in figure \ref{fig:vertical-curve-interval}.
 
 \begin{itemize}
     \item Number of intervals $N=$ \num{5}
@@ -706,7 +739,7 @@ Next, assume there are 5 intervals and calculate the longitudinal length between
     I = \frac{L_{vc}}{N} = \frac{87.5}{5} = 17.5
 \end{equation}
 
-Next, work out how far each interval is from the initial transition point.
+Next, calculate how far each interval is from the initial transition point at $h_0$.
 
 \begin{equation}
     I_n = I \cdot n
@@ -718,14 +751,9 @@ For the third interval $n=3$
     I_3 = 17.5 \cdot 3 = 52.5
 \end{equation}
 
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.5\linewidth]{vertical_curve_1}
-    \caption{Horizontal curve worked example}
-    \label{fig:hoz-cur-1}
-\end{figure}
-
 \subsubsection*{Grade level}
+
+Then, calculate the height of each interval point (on the linear project line of the initial gradient), this measure is shown in figure \ref{fig:vertical-curve-height}.
 
 \begin{equation}
     h_n=h_0+\frac{G_1 \cdot I_n}{100}
@@ -737,14 +765,9 @@ for the first interval $n=1$
     h_1=h_0+\frac{G_1 \cdot I_1}{100}=-35+\frac{1 \cdot 17.5}{100} = -34.825
 \end{equation}
 
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.5\linewidth]{vertical_curve_2}
-    \caption{Horizontal curve worked example}
-    \label{fig:hoz-cur-2}
-\end{figure}
-
 \subsubsection*{Extension}
+
+Next, we now have the height of each individual point, so calculate the distance from the interval point to the radial curve, these are the sections shown in green in figure \ref{fig:vertical-curve-extension}.
 
 \begin{equation}
     O_n=\frac{(G_1-G_2) \cdot I_n^2}{200 \cdot L_{vc}}
@@ -756,14 +779,9 @@ for the second interval n=2
     O_2=\frac{(G_1-G_2) \cdot I_2^2}{200 \cdot L_{vc}} = \frac{(1-(-2.5)) \cdot 35^2}{200 \cdot 87.5} = 0.245
 \end{equation}
 
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.5\linewidth]{vertical_curve_3}
-    \caption{Horizontal curve worked example}
-    \label{fig:hoz-cur-3}
-\end{figure}
+\subsubsection*{Final Height}
 
-\subsubsection*{Curve Height}
+The final step is therefore to subtract the extension from the grade level at each interval to find the final height, as is shown in figure \ref{fig:vertical-curve-fh}.
 
 \begin{equation}
     FH_n=h_n - O_n
@@ -775,14 +793,9 @@ for the fourth interval n=4
     FH_n=h_n - O_n = -34.300-0.980=-35.280
 \end{equation}
 
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.5\linewidth]{vertical_curve_4}
-    \caption{Horizontal curve worked example}
-    \label{fig:hoz-cur-4}
-\end{figure}
-
 \subsubsection*{Results Table}
+
+With interval
 
 \begin{table}[h]
 \centering
@@ -790,13 +803,15 @@ for the fourth interval n=4
 \label{tab:vc_example}
 \begin{tabular}{@{}lllll@{}}
 \toprule
-Interval & I (m)  & h (m)   & O (m) & FH (m)  \\ \midrule
-0        & 0.000  & -35.000 & 0.000 & -35.000 \\
-1        & 17.500 & -34.825 & 0.061 & -34.886 \\
-2        & 35.000 & -34.650 & 0.245 & -34.895 \\
-3        & 52.500 & -34.475 & 0.551 & -35.026 \\
-4        & 70.000 & -34.300 & 0.980 & -35.280 \\
-5        & 87.500 & -34.125 & 1.531 & -35.656 \\ \bottomrule
+Interval number & Interval length & Grade level & Extension & Final Height \\
+($n$) & $I$ (\unit{m}) & $h$ (\unit{m}) & $O$ (\unit{m}) & $FH$ (\unit{m}) \\
+\midrule
+\num{0} & \num{0.000}  & \num{-35.000} & \num{0.000} & \num{-35.000} \\
+\num{1} & \num{17.500} & \num{-34.825} & \num{0.061} & \num{-34.886} \\
+\num{2} & \num{35.000} & \num{-34.650} & \num{0.245} & \num{-34.895} \\
+\num{3} & \num{52.500} & \num{-34.475} & \num{0.551} & \num{-35.026} \\
+\num{4} & \num{70.000} & \num{-34.300} & \num{0.980} & \num{-35.280} \\
+\num{5} & \num{87.500} & \num{-34.125} & \num{1.531} & \num{-35.656} \\ \bottomrule
 \end{tabular}
 \end{table}
 
@@ -852,13 +867,15 @@ $L_{vc}=$ \qty{25}{m}
 
 \begin{tabular}{@{}lllll@{}}
 \toprule
-interval & I (m) & h (m)   & O (m) & FH (m)  \\ \midrule
-0        & 0     & -35.000 & 0.000 & -35.000 \\
-1        & 5     & -34.873 & 0.013 & -34.886 \\
-2        & 10    & -34.746 & 0.051 & -34.797 \\
-3        & 15    & -34.619 & 0.114 & -34.733 \\
-4        & 20    & -34.492 & 0.203 & -34.695 \\
-5        & 25    & -34.365 & 0.317 & -34.683 \\ \bottomrule
+Interval number & Interval length & Grade level & Extension & Final Height \\
+($n$) & $I$ (\unit{m}) & $h$ (\unit{m}) & $O$ (\unit{m}) & $FH$ (\unit{m}) \\
+\midrule
+\num{0} & \num{0}  & \num{-35.000} & \num{0.000} & \num{-35.000} \\
+\num{1} & \num{5}  & \num{-34.873} & \num{0.013} & \num{-34.886} \\
+\num{2} & \num{10} & \num{-34.746} & \num{0.051} & \num{-34.797} \\
+\num{3} & \num{15} & \num{-34.619} & \num{0.114} & \num{-34.733} \\
+\num{4} & \num{20} & \num{-34.492} & \num{0.203} & \num{-34.695} \\
+\num{5} & \num{25} & \num{-34.365} & \num{0.317} & \num{-35.683} \\ \bottomrule
 \end{tabular}
 
 \end{solution}
