Removed Larken font

--- a/main.tex
+++ b/main.tex
@@ -478,7 +478,7 @@ $S_c=$ \qty{0.375}{m}
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.9\linewidth]{images/track-alignment-worksheet-vertical-curve.drawio.pdf}
+    \includegraphics[width=0.9\linewidth]{track-alignment-worksheet-horizontal-curve.drawio}
     \caption{Diagram of horizontal curve worked example}
     \label{fig:hoz-cur-example}
 \end{figure}
